--- a/Ansible/remove_ssh_group.yml
+++ b/Ansible/remove_ssh_group.yml
@@ -1,9 +1,12 @@
 ---
 - hosts: localhost
+  vars_files:
+  # File which holds the variables used
+   - ./vars/all
   tasks:
   # Remove SSH groups, specifying cloud, naming the group and setting state
     - name: Remove SSH group
       os_security_group:
-        cloud: openstack
+        cloud: "{{ cloud }}"
         name: SSH
         state: absent
