--- a/Ansible/destroy_wordpress.yml
+++ b/Ansible/destroy_wordpress.yml
@@ -5,12 +5,12 @@
    - ./vars/ips.yml
    - ./vars/all
   tasks:
-    - name: Create Fileserver
+    - name: Create Wordpress servers
       os_server:
         cloud: "{{ cloud }}"
         availability_zone: Education
-        name: fileserver_{{ item }}
-        flavor: c1-r1-d40
+        name: wordpress_{{ item }}
+        flavor: c1-r1-d10
         network: "{{ base }}-net"
         image: Ubuntu server 20.04
         key_name: "{{ key_name }}"
@@ -18,5 +18,9 @@
           - SSH
         floating_ips:
           - "{{ item }}"
-        state: present
-      loop: "{{ ips_fileserver }}"
+        state: absent
+      loop: "{{ ips_wordpress }}"
+
+
+
+
