--- a/Ansible/templates/loadbalancer.conf
+++ b/Ansible/templates/loadbalancer.conf
@@ -16,34 +16,35 @@ server {
         }
 }
 
-# All traffic on 3306 should be read and thus load balanced
-upstream mysql_read {
+
+stream {
+    # All traffic on 3306 should be read and thus load balanced
+    upstream mysql_read {
         server 192.168.20.30:3306; 
         server 192.168.20.31:3306;
     }
 
-server {
-        listen 192.168.20.0:3306;
-        
-        location / {
-            proxy_pass http://mysql_read; 
-        }
-        
+    server {
+        listen 3306;
+        server_name 192.168.20.11;
+        proxy_pass mysql_read; 
+                
     }
 
 # Sending all write calls through 33060 instead of 3306, goes directly to the master!
-upstream mysql_write {
+    upstream mysql_write {
         server 192.168.20.30:3306;
     }
 
     server {
-        listen 192.168.20.0:33060;
+        listen 33060;
+        server_name 192.168.20.11;
+        proxy_pass mysql_write;
         
-        location / {
-            proxy_pass http://mysql_write;
-        }
         
     }
+}
+
 
 
 
