--- a/Ansible/templates/nginx.conf
+++ b/Ansible/templates/nginx.conf
@@ -5,7 +5,7 @@ pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
 events {
-        worker_connections 768;
+        worker_connections 1034;
         # multi_accept on;
 }
 
@@ -15,7 +15,7 @@ http {
         ##
 
         sendfile on;
-        tcp_nopush on;
+        #tcp_nopush on;
         tcp_nodelay on;
         keepalive_timeout 65;
         types_hash_max_size 2048;
@@ -46,7 +46,7 @@ http {
         # Gzip Settings
         ##
 
-        gzip on;
+        #gzip on;
 
         # gzip_vary on;
         # gzip_proxied any;
