--- a/Ansible/configure_wordpress.yml
+++ b/Ansible/configure_wordpress.yml
@@ -1,13 +1,6 @@
 ---
-- hosts: wordpress
-  vars_files:
-  # File which holds the variables used
-   - ./vars/ips.yml
-   - ./vars/all
-  user: ubuntu
+- name: Configure wordpress.
+  hosts: localhost
   become: yes
-  tasks:
-    - name: Update all installed packages.
-      apt:
-        name: "*"
-        state: latest
+  roles:
+   - wordpress
