--- a/Ansible/mysql_master.yml
+++ b/Ansible/mysql_master.yml
@@ -5,23 +5,39 @@
   user: ubuntu
   become: yes
   tasks:
+
+#Installing MySQL and dependencies
     - name: Install required software
       apt:
         name: "{{ item }}"
       with_items:
         - mysql-server
-        - python-mysqldb
-        - mysql
 
+# Installing nfs-commons to be able to use network sharing
+    - name: Installing nfs-commons
+      apt: name=nfs-common state=present
+
+# Creating directory to host the virtual folder connected to NFS server
+    - name: making shared directory
+      ansible.builtin.command:
+        cmd: sudo mkdir -p /mnt/shared_folder
+
+# Mounting folder to NFS server MySQL version
+    - name:
+      ansible.builtin.command:
+        cmd: sudo mount 192.168.20.40:/mnt/mysql /mnt/shared_folder
+
+  #Starting the service.
     - name: Start the MySQL service
       action: service name=mysql state=started
 
+  # Copying a file with configuration parameters into MySQL server so that it is read in
     - name: Copy .my.cnf file with root password credentials
       become: true
       become_user: root
       template: src=./templates/.my.cnf dest=/root/.my.cnf owner=root mode=0600
 
-
+  # Setting root parameters
     - name: Set root user password
       become: true
       become_user: root
@@ -31,28 +47,59 @@
         password: "{{ mysql_root_password }}"
         priv: "*.*:ALL,GRANT"
       with_items:
-        - "{{ ansible_hostname }}"
+        - "{{ ansible_host }}"
         - 127.0.0.1
         - ::1
         - localhost
 
-    - name: Delete anonymous MySQL server user for $server_hostname
-      become: true
-      action: mysql_user user="" host="{{ server_hostname }}" state="absent"
-      
-    - name: Delete anonymous MySQL server user for localhost
-      become: true
-      action: mysql_user user="" state="absent"
+  # Removing standard anonymous users and test databases   
+    - name: Removes all anonymous user accounts
+      mysql_user:
+        name: ''
+        host_all: yes
+        state: absent
 
     - name: Remove the MySQL test database
       become: true
       action: mysql_db db=test state=absent
 
+  # Updating passwords
     - name: Update mysql root password for all root accounts
       become: true
       mysql_user: name=root host={{ server_hostname }} password={{ mysql_root_password }} priv=*.*:ALL,GRANT
       with_items:
-        - "{{ ansible_hostname }}"
+        - "{{ ansible_host }}"
         - 127.0.0.1
         - ::1
         - localhost
+  # Creating wordpress users and databases
+    - name: Create mysql user
+      become: true
+      mysql_user:
+        name: "{{ migrate_db_user }}"
+        password: "{{ migrate_db_password }}"
+        priv: "*.*:ALL"
+
+    - name: Create mysql database
+      become: true
+      mysql_db:
+        name: "{{ migrate_db_name }}"
+        state: present
+
+  # Copying dump to host
+    - name: Copy database
+      become: true
+      copy:
+        src: "{{ migrate_db_import_path }}"
+        dest: /tmp/sorsa.sql
+        owner: root
+        group: root
+        mode: 0600
+
+  # Restoring database
+    - name: Import database
+      become: true
+      mysql_db:
+          name: "{{ migrate_db_name }}"
+          state: import
+          target: /tmp/sorsa.sql
