--- a/Ansible/mysql_master.yml
+++ b/Ansible/mysql_master.yml
@@ -37,17 +37,19 @@
       become_user: root
       template: src=./templates/.my.cnf dest=/root/.my.cnf owner=root mode=0600
 
+
   # Setting root parameters
     - name: Set root user password
       become: true
       become_user: root
       mysql_user:
         name: root
+        login_unix_socket: /var/run/mysqld/mysqld.sock
         host: "{{ item }}"
         password: "{{ mysql_root_password }}"
         priv: "*.*:ALL,GRANT"
       with_items:
-        - "{{ ansible_host }}"
+        - "{{ master_db_server_hostname }}"
         - 127.0.0.1
         - ::1
         - localhost
@@ -66,9 +68,9 @@
   # Updating passwords
     - name: Update mysql root password for all root accounts
       become: true
-      mysql_user: name=root host={{ server_hostname }} password={{ mysql_root_password }} priv=*.*:ALL,GRANT
+      mysql_user: name=root host={{ master_db_server_hostname }} password={{ mysql_root_password }} priv=*.*:ALL,GRANT
       with_items:
-        - "{{ ansible_host }}"
+        - "{{ master_db_server_hostname }}"
         - 127.0.0.1
         - ::1
         - localhost
@@ -91,7 +93,7 @@
       become: true
       copy:
         src: "{{ migrate_db_import_path }}"
-        dest: /tmp/sorsa.sql
+        dest: /tmp/backup.sql
         owner: root
         group: root
         mode: 0600
@@ -102,4 +104,4 @@
       mysql_db:
           name: "{{ migrate_db_name }}"
           state: import
-          target: /tmp/sorsa.sql
+          target: /tmp/backup.sql
