--- a/Ansible/templates/nginx.conf
+++ b/Ansible/templates/nginx.conf
@@ -3,6 +3,7 @@ user www-data;
 worker_processes auto;
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
+include /etc/nginx/conf.d/mysql_loadbalancer.conf;
 
 events {
         worker_connections 1034;
@@ -59,7 +60,7 @@ http {
         # Virtual Host Configs
         ##
 
-        include /etc/nginx/conf.d/*.conf;
+        include /etc/nginx/conf.d/loadbalancer.conf;
         # include /etc/nginx/sites-enabled/*;
 }
 
