--- a/Ansible/ansible.cfg
+++ b/Ansible/ansible.cfg
@@ -2,4 +2,4 @@
 inventory	= ./inventory
 remote_user = ubuntu
 # UPDATE WITH YOUR PATH!!
-private_key_file = "path/to/ssh"
+private_key_file = path/to/ssh
