--- a/Ansible/mysql_master.yml
+++ b/Ansible/mysql_master.yml
@@ -10,6 +10,7 @@
     - name: Install required software
       apt:
         name: "{{ item }}"
+        state: present
       with_items:
         - mysql-server
 
@@ -27,16 +28,15 @@
       ansible.builtin.command:
         cmd: sudo mount 192.168.20.40:/mnt/mysql /mnt/shared_folder
 
-  #Starting the service.
-    - name: Start the MySQL service
-      action: service name=mysql state=started
-
   # Copying a file with configuration parameters into MySQL server so that it is read in
     - name: Copy .my.cnf file with root password credentials
       become: true
       become_user: root
-      template: src=./templates/.my.cnf dest=/root/.my.cnf owner=root mode=0600
+      template: src=./templates/master.my.cnf dest=/root/.my.cnf owner=root mode=0600
 
+  #Starting the service.
+    - name: Start the MySQL service
+      action: service name=mysql state=started
 
   # Setting root parameters
     - name: Set root user password
@@ -116,4 +116,19 @@
         query:
         - UPDATE wordpress.wp_options SET option_value = '{{ host_ip }}' WHERE (option_id = '1');
         - UPDATE wordpress.wp_options SET option_value = '{{ host_ip }}' WHERE (option_id = '2');
-        single_transaction: yes
+        - SET @@GLOBAL.ENFORCE_GTID_CONSISTENCY = ON;
+        - SET @@GLOBAL.GTID_MODE = OFF_PERMISSIVE;
+        - SET @@GLOBAL.GTID_MODE = ON_PERMISSIVE;
+        - SET @@GLOBAL.GTID_MODE = ON;
+        single_transaction: no
+
+  # Create REPLICATION User
+    - name: Create Replication user on Master server
+      mysql_user:
+        name: "{{ repl_user_name }}"
+        host: "%"
+        password: "{{ repl_user_pass }}"
+        priv: "*.*:REPLICATION SLAVE"
+        state: present
+        login_user: root
+        login_password: "{{ mysql_root_password }}"
