--- a/Ansible/site_deploy.yml
+++ b/Ansible/site_deploy.yml
@@ -2,3 +2,4 @@
 - import_playbook: nginx.yml
 - import_playbook: nfs_server.yml
 - import_playbook: mysql_master.yml
+- import_playbook: mysql_slave.yml
