--- a/Ansible/wordpress.yml
+++ b/Ansible/wordpress.yml
@@ -12,13 +12,14 @@
 
     - name: Install LAMP Packages
       apt: name={{ item }} update_cache=yes state=latest
-      loop: [ 'apache2', 'php', 'libapache2-mod-php' ]
+      loop: [ 'apache2', 'libapache2-mod-php' ]
       tags: [ system ]
 
-    - name: Install PHP Extensions
-      apt: name={{ item }} update_cache=yes state=latest
-      loop: "{{ php_modules }}"
-      tags: [ system ]
+    - name: Install PHP and extensions.
+      shell: |
+        sudo apt -y install php7.4
+        sudo apt install php7.4-curl php7.4-gd php7.4-mbstring php7.4-xml php7.4-xmlrpc php7.4-soap php7.4-intl php7.4-zip
+
 
   # Apache Configuration
     - name: Create document root
@@ -32,7 +33,7 @@
 
     - name: Set up Apache VirtualHost
       template:
-        src: "files/apache.conf.j2"
+        src: "./files/apache.conf.j2"
         dest: "/etc/apache2/sites-available/{{ http_conf }}"
       notify: Reload Apache
       tags: [ apache ]
@@ -63,7 +64,7 @@
   # WordPress Configuration
     - name: Download and unpack latest WordPress
       unarchive:
-        src: https://wordpress.org/latest.tar.gz
+        src: https://wordpress.org/wordpress-5.4.7.tar.gz
         dest: "/var/www/{{ http_host }}"
         remote_src: yes
         creates: "/var/www/{{ http_host }}/wordpress"
