--- a/Ansible/wordpress.yml
+++ b/Ansible/wordpress.yml
@@ -18,7 +18,7 @@
     - name: Install PHP and extensions.
       shell: |
         sudo apt -y install php7.4
-        sudo apt install php7.4-curl php7.4-gd php7.4-mbstring php7.4-xml php7.4-xmlrpc php7.4-soap php7.4-intl php7.4-zip
+        sudo apt install php7.4-curl php7.4-gd php7.4-mbstring php7.4-xml php7.4-xmlrpc php7.4-soap php7.4-intl php7.4-zip php7.4-mysql
 
 
   # Apache Configuration
