--- a/Ansible/wordpress.yml
+++ b/Ansible/wordpress.yml
@@ -18,8 +18,8 @@
 
     - name: Install PHP and extensions.
       shell: |
-        sudo apt -y install php7.4
-        sudo apt -y install php7.4-curl php7.4-gd php7.4-mbstring php7.4-xml php7.4-xmlrpc php7.4-soap php7.4-intl php7.4-zip php7.4-mysql
+        sudo apt -y install php7.0
+        sudo apt -y install php7.0-curl php7.0-gd php7.0-mbstring php7.0-xml php7.0-xmlrpc php7.0-soap php7.0-intl php7.0-zip php7.0-mysql
 
 
   # Apache Configuration
@@ -74,15 +74,15 @@
   # WordPress Configuration
     - name: Download and unpack latest WordPress
       unarchive:
-        src: https://wordpress.org/wordpress-5.4.7.tar.gz
+        src: /home/ubuntu/Ansible/site_files/acme_wordpress_files.tar
         dest: /home/ubuntu/temp/
-        remote_src: yes
+        remote_src: no
       tags: [ wordpress ]
 
   # Moving wordpress files to right location
     - name: Move worpress files to right location
       shell: |
-        cp -r /home/ubuntu/temp/wordpress/* /var/www/{{ http_host }}/
+        cp -r /home/ubuntu/temp/* /var/www/{{ http_host }}/
 
     - name: Set ownership
       file:
