--- a/Ansible/templates/nginx.conf
+++ b/Ansible/templates/nginx.conf
@@ -3,7 +3,7 @@ user www-data;
 worker_processes auto;
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
-include /etc/nginx/conf.d/mysql_loadbalancer.conf;
+#include /etc/nginx/conf.d/mysql_loadbalancer.conf;
 
 events {
         worker_connections 1034;
