--- a/Ansible/templates/slave.my.cnf
+++ b/Ansible/templates/slave.my.cnf
@@ -2,7 +2,13 @@
 user        = root
 password    = {{ mysql_root_password }}
 
+
 [mysqld]
+
+bind-address           = 192.168.20.31
+mysqlx-bind-address    = 127.0.0.1
+
+
 
 datadir = /var/lib/mysql
 
@@ -71,3 +77,4 @@ loose_rpl_semi_sync_master_timeout = 5000
 symbolic-links=0
 
 read_only=ON
+
