--- a/cloud_init_ansible/wp_machines.yaml
+++ b/cloud_init_ansible/wp_machines.yaml
@@ -1,8 +1,8 @@
 #cloud-config
 
 runcmd:
-#  - sudo apt update
-#  - sudo apt upgrade -y
+  - sudo apt update
+  - sudo apt upgrade -y
   - sudo add-apt-repository ppa:ondrej/php -y
   - sudo apt install -y python
   - sudo apt install -y python3
