testing wait task in wordpress playbook

--- a/Ansible/wordpress.yml
+++ b/Ansible/wordpress.yml
@@ -7,6 +7,11 @@
     - vars/default.yml
 
   tasks:
+    - name: Wait until the lock file is removed
+      wait_for:
+        path: name/of/the/lock/file
+        state: absent
+
     - name: Install prerequisites
       apt: name=aptitude update_cache=yes state=latest force_apt_get=yes
       tags: [ system ]
