--- a/Ansible/nfs_server.yml
+++ b/Ansible/nfs_server.yml
@@ -4,7 +4,13 @@
    - ./vars/all
   user: ubuntu
   become: yes
+  # Wait for dpkg lock to be absent
   tasks:
+    - name: Wait until the lock file is removed
+      wait_for:
+        path: /var/lib/dpkg/lock-frontend
+        state: absent
+        
   # Updating and upgrading all packages.
     - name: Update apt-get repo and cache
       apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
